[project]
name = "pddl2dypdl"
version = "0.1.0"
description = "PDDL2DyPDL: A translator from PDDL to DyPDL"
authors = [{ name = "Dillon Z. Chen", email = "dillon.chen1@gmail.com" }]
license = "MIT"
dependencies = [
  "didppy==0.9.0",
  "termcolor==3.1.0",
]

[tool.setuptools.packages.find]
include = ["pddl2dypdl"]

[tool.black]
line-length = 119
extend-exclude = ".venv/|venv/|ext/"

[tool.isort]
profile = "black"
line_length = 119
skip = [".venv/", "venv/", "ext/"]
indent = 4
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(asctime)s %(filename)s::%(lineno)s %(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
